labassignment2/task2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skolsida
spec:
  selector:
    uri: example.com
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
